--- a/main.css
+++ b/main.css
@@ -4,191 +4,97 @@
 
 body {
   background-color: #F2EAE2;
-  min-height: 100vh; 
+  min-height: 100vh;  
 }
 
 .main-box {
-  margin: auto 16px;
+  margin: 1.5rem 1rem auto 1rem;
   border-radius: 10px;
   background-color: white;
-  display: inline-block;
-  position: absolute;
-  top: 10%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 .img-background {
-  border-radius: 10px;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
   width: 100%;
   height: 240px;
   background: url('./images/image-product-mobile.jpg');
   background-size: cover;
 }
 .content {
-  padding: 24px;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
 }
 .small-title {
-  height: 15px;
-  left: 7%;
-  right: 66.18%;
-  top: calc(50% - 15px/2 - 34px);
-
-  /* Overline */
-
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 15px;
-  /* identical to box height */
-
-  letter-spacing: 5px;
-
-  /* Aurometal Saurus */
-
+  letter-spacing: 0.3rem;
   color: #6C7289;
 }
 
 .title {
-  margin-top: 16px;
-  height: 64px;
-  left: 7%;
-  right: 7%;
-  top: calc(50% - 64px/2 + 17.5px);
-
-  /* Display */
-
   font-family: 'Fraunces';
   font-style: normal;
   font-weight: 700;
-  font-size: 32px;
-  line-height: 32px;
-  /* or 100% */
-
-
-  /* Gunmetal */
-
+  font-size: 2rem;
+  line-height: 2rem;
   color: #1C232B;
 }
 
 .content p {
-  margin-top: 16px;
-  height: 92px;
-  left: 7%;
-  right: 7%;
-  top: calc(50% - 92px/2 + 111.5px);
-
-  /* Body */
-
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 23px;
-  /* or 164% */
-
-
-  /* Aurometal Saurus */
-
+  font-size: 0.95rem;
+  line-height: 1.5rem;
   color: #6C7289;
 }
 
 .price {
-  vertical-align: middle;
-  margin-top: 24px;
-  
+  display: flex;
 }
 
 .price-1 {
-  /* display: inline-block; */
-  vertical-align: middle;
-  margin-right: 19px;
-  height: 32px;
-  left: 0%;
-  right: 34.54%;
-  top: calc(50% - 32px/2);
-
-  /* Display */
-
   font-family: 'Fraunces';
   font-style: normal;
   font-weight: 700;
-  font-size: 32px;
-  line-height: 32px;
-  /* identical to box height, or 100% */
-
-
-  /* Deep Aquamarine */
-  
+  font-size: 2rem;
+  line-height: 2rem;
   color: #3D8168;
 }
 
 .price-2 {
-  vertical-align: middle;
-  /* display: inline-block; */
-  height: 23px;
-  left: 75.26%;
-  right: 0%;
-  top: calc(50% - 23px/2 + 0.5px);
-
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 500;
-  font-size: 13px;
-  line-height: 23px;
-  /* identical to box height, or 177% */
-
+  font-size: 0.95rem;
+  line-height: 1.5rem;
   text-decoration-line: line-through;
-
-  /* Aurometal Saurus */
-
   color: #6C7289;
 }
 
 .content button {
-  margin-top: 20px;
-  left: 7.29%;
-  right: 6.71%;
-  top: 88.22%;
-  bottom: 3.93%;
-
-  /* Deep Aquamarine */
-
   background: #3D8168;
   border-radius: 8px;
   width: 295px;
   height: 48px;
-  /* left: 25px;
-  top: 539px; */
   border: none;
 }
 
 .icon-cart {
-  display: inline-block;
-  vertical-align: middle;
+  
 }
 
 .button-text {
-  display: inline-block;
-  vertical-align: middle;
-  height: 17px;
-  left: 23.42%;
-  right: 0%;
-  top: calc(50% - 17px/2 - 0.5px);
-
-  /* Button Text */
-
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 700;
-  font-size: 14px;
-  line-height: 17px;
-  /* identical to box height */
-
-
-  /* Pure White */
-
+  font-size: 0.95rem;
+  line-height: 1rem;
   color: #FFFFFF;
-  margin-left: 5px;
 }
